# polars_rust_tests

./: .env  .gitignore  Cargo.toml  Dockerfile  benchmark_polars.py  claude_genie.md  curl_new_temp_feed.sh  docker-compose.yml  polars_parquet.py  start.sh  test_emile.py  test_emile_lazy.py  triton_gpu.py
config/: feeds.json
src/: data.rs  main.rs  utils.rs
src/feed/: mod.rs
src/feed/parameters/: filter_parameters.rs  mod.rs  operation_parameters.rs
src/filters/: correlation.rs  duplicate_values.rs  mod.rs
src/fs/: file.rs  mod.rs
src/io/: lazyframe.rs  mod.rs
src/operations/: filters.rs  join.rs  mod.rs
src/operations/filters/: mod.rs
src/services/: api.rs
