[package]
name = "data_processor"
version = "0.1.0"
edition = "2024"

[dependencies]
polars = { version = "0.44.2", features = ["lazy", "json", "rank", "propagate_nans", "cov", "is_in", "dtype-categorical", "strings", "temporal", "csv", "fmt", "parquet", "ipc", "ipc_streaming", "streaming", "performant", "asof_join", "polars-ops"], default-features=false }
serde = { version = "1.0", features = ["derive"] }
serde_json = {version = "1.0", features = ["preserve_order"]}
lazy_static = "1.5.0"
regex = "1.11.1"
rayon = "1.10.0"
actix-web = { version = "4", features = ["rustls", "macros"], default-features = false  }
actix-cors = "0.7.0"
